# try-elasticsearch

./: .env  Cargo.toml  HANDLING_MIXED_TYPES.md  INDEX_OPTIMIZATION.md  MULTI_COLLECTION_STRATEGY.md  PROJECT_NOTES.md  README.md  SAMPLE_QUERIES.md  SETUP.md  SIMPLE_DYNAMIC_SOLUTION.md  SIMPLE_QUERIES.md  create-index.sh  elasticsearch-dynamic-mapping.json  elasticsearch-mapping.json  env.example  sample.csv  test-dynamic-mapping.sh
src/: checkpoint.rs  collection_config.rs  config.rs  elasticsearch.rs  main.rs  models.rs  models_flexible.rs
