[package]
name = "erc721-elasticsearch-migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
futures = "0.3"
dotenvy = "0.15"
envy = "0.4"
lazy_static = "1.4"
tokio-util = { version = "0.7", features = ["io"] }
